reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_with_fixed_size_array-2.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "super::into_typescript_code::<TestStructWithFixedSizeArray>()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflect-cli
//
// Schema name: 
// 




export namespace reflect {

/// Struct object with no fields
export interface Empty {
    }


/// Error object which is expected to be never returned
export interface Infallible {
    }

}

export namespace reflect_demo {

export namespace tests {

export namespace basic {

export interface TestStructWithFixedSizeArray {
    _f: std.Array<number /* u8 */, 3>;
    }

}
}
}
