reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_with_fixed_size_array.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "super::into_schema::<TestStructWithFixedSizeArray>()"
---
{
  "name": "",
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Empty",
        "description": "Struct object with no fields"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructWithFixedSizeArray",
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "std::array::Array",
              "parameters": [
                {
                  "name": "u8"
                },
                {
                  "name": "3"
                }
              ]
            },
            "required": true
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::array::Array",
        "description": "Fixed-size Array",
        "parameters": [
          {
            "name": "T"
          },
          {
            "name": "N"
          }
        ],
        "fallback": {
          "name": "std::vec::Vec",
          "parameters": [
            {
              "name": "T"
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::vec::Vec",
        "description": "Expandable array type",
        "parameters": [
          {
            "name": "T"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Infallible",
        "description": "Error object which is expected to be never returned"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructWithFixedSizeArray",
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "std::array::Array",
              "parameters": [
                {
                  "name": "u8"
                },
                {
                  "name": "3"
                }
              ]
            },
            "required": true
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::array::Array",
        "description": "Fixed-size Array",
        "parameters": [
          {
            "name": "T"
          },
          {
            "name": "N"
          }
        ],
        "fallback": {
          "name": "std::vec::Vec",
          "parameters": [
            {
              "name": "T"
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::vec::Vec",
        "description": "Expandable array type",
        "parameters": [
          {
            "name": "T"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
}
