reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_with_hashset_field.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "super::into_schema::<TestStructWithHashSetField>()"
---
{
  "name": "",
  "functions": [
    {
      "name": "",
      "input_type": {
        "name": "reflect_demo::tests::basic::TestStructWithHashSetField"
      },
      "output_type": {
        "name": "reflect_demo::tests::basic::TestStructWithHashSetField"
      },
      "serialization": [
        "json"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Empty",
        "description": "Struct object with no fields"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructWithHashSetField",
        "fields": [
          {
            "name": "_f_hashset",
            "type": {
              "name": "std::collections::HashSet",
              "parameters": [
                {
                  "name": "u8"
                }
              ]
            },
            "required": true
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::collections::HashSet",
        "description": "Value set type",
        "parameters": [
          {
            "name": "V"
          }
        ],
        "fallback": {
          "name": "std::vec::Vec",
          "parameters": [
            {
              "name": "V"
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::vec::Vec",
        "description": "Expandable array type",
        "parameters": [
          {
            "name": "T"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Infallible",
        "description": "Error object which is expected to be never returned"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructWithHashSetField",
        "fields": [
          {
            "name": "_f_hashset",
            "type": {
              "name": "std::collections::HashSet",
              "parameters": [
                {
                  "name": "u8"
                }
              ]
            },
            "required": true
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::collections::HashSet",
        "description": "Value set type",
        "parameters": [
          {
            "name": "V"
          }
        ],
        "fallback": {
          "name": "std::vec::Vec",
          "parameters": [
            {
              "name": "V"
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::vec::Vec",
        "description": "Expandable array type",
        "parameters": [
          {
            "name": "T"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
}
